[package]
name = "copy_arrayvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", optional = true, default-features = false }

[features]
default = ["std"]
serde = ["dep:serde"]
std = []

[dev-dependencies]
serde_test = "1.0.176"
